# cookiecutter-webapp-base

./: CHANGES  README.md  cookiecutter.json
hooks/: post_gen_project.sh
{{cookiecutter.project_slug}}/: CHANGES
{{cookiecutter.project_slug}}/v1/: sitecmd
{{cookiecutter.project_slug}}/v1/devel/backend/: AUTHORS.rst  Makefile  README  setup.cfg
{{cookiecutter.project_slug}}/v1/devel/backend/src/server/: config.py  model.py
{{cookiecutter.project_slug}}/v1/devel/frontend/: .env  .env.bak  package.json
{{cookiecutter.project_slug}}/v1/devel/frontend/src/app/: app.js  footer.js  header.js  layout.js
{{cookiecutter.project_slug}}/v1/devel/frontend/src/app/pages/: index.js
{{cookiecutter.project_slug}}/v1/devel/frontend/src/app/pages/home/: home.js
{{cookiecutter.project_slug}}/{{cookiecutter.project_branch}}/: sitecmd
{{cookiecutter.project_slug}}/{{cookiecutter.project_branch}}/devel/backend/: Makefile  pyproject.toml
{{cookiecutter.project_slug}}/{{cookiecutter.project_branch}}/devel/backend/src/server/: __init__.py  commands.py  config.py  metadata.py  model.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_branch}}/devel/frontend/: .env  index.html  package-lock.json  package.json  vite.config.js
{{cookiecutter.project_slug}}/{{cookiecutter.project_branch}}/devel/frontend/src/: index.js  main.jsx  program.jsx  setupProxy.js
{{cookiecutter.project_slug}}/{{cookiecutter.project_branch}}/devel/frontend/src/app/: app.jsx  footer.jsx  header.jsx  header.module.css  layout.jsx
{{cookiecutter.project_slug}}/{{cookiecutter.project_branch}}/devel/frontend/src/app/pages/admin/: AdminHome.jsx  index.js
{{cookiecutter.project_slug}}/{{cookiecutter.project_branch}}/devel/frontend/src/app/pages/auth/: LoginPage.jsx
{{cookiecutter.project_slug}}/{{cookiecutter.project_branch}}/devel/frontend/src/app/pages/contacts/: contacts.jsx
{{cookiecutter.project_slug}}/{{cookiecutter.project_release}}/devel/backend/: CHANGES  setup.cfg
{{cookiecutter.project_slug}}/{{cookiecutter.project_release}}/devel/backend/src/server/: config.py  metadata.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_release}}/devel/frontend/src/app/pages/home/: StationList.js
